Tribute page: small spacing fixing on footer

--- a/tribute-page/styles.css
+++ b/tribute-page/styles.css
@@ -90,6 +90,9 @@ li a:active {
     text-shadow: 0 1px 1px white;
     color: rgb(32, 32, 32);
 }
+h2 {
+    padding: 0 16px;
+}
 #tribute-link {
     text-decoration: none;
     color: #39c;
